test/subjects/errors/sticks.php
<?php

	declare (sticks = 0) // { phc-error: PHP only supports the 'ticks' directive } 
	{
		echo "a";
	}
?>
